--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Skate Trick Randomizer</h1>
+    <h2 id="author">By Carlos Grajeda</h2>
     <p>Push the "GO SKATE" button to generate a random trick for you to attempt.
         <br>Practice and learn new tricks!
     </p>
