--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <br>Practice and learn new tricks!
     </p>
     <section>
-        <h2 id="boardpop" class="tricks"></h2>
-        <h2 id="direction" class="tricks"></h2>
-        <h2 id="rotation" class="tricks"></h2>
-        <h2 id="flip" class="tricks"></h2>
+        <div class="one"><h2 id="boardpop" class="tricks"></h2></div>
+        <div class="two"><h2 id="direction" class="tricks"></h2></div>
+        <div class="three"><h2 id="rotation" class="tricks"></h2></div>
+        <div class="four"><h2 id="flip" class="tricks"></h2></div>
     </section>
     
     <button id="button">GO SKATE</button>
